--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="sidebar">
       <ul class="sidebar-menu">
-        <li><a href="#">白頭翁的特性</a></li>
+        <li><a href="#" class="active">白頭翁的特性</a></li>
         <li><a href="#">白頭翁的故事</a></li>
         <li><a href="#">白頭翁的美照</a></li>
         <li><a href="#">白頭翁新花樣</a></li>
@@ -26,7 +26,8 @@
         <div class="info-card">
           <h2>外觀</h2>
           <p>
-            白頭翁體長約17至22公分，頭部頂端呈現黑而帶有光澤，兩側上方為灰白色的羽，眼睛四周白色羽毛環繞，尾部為褐色，並且頭頂到眼睛後方呈現白色。
+            白頭鵯體長約17到22公分，額至頭頂純黑色而富有光澤，兩眼上方至後枕白色，形成一白色枕環。耳羽後部有一白斑，
+            此白環與白斑在黑色的頭部均極為醒目，老鳥的枕羽(後頭部)更潔白，所以又叫「白頭翁」。
           </p>
         </div>
         <div class="info-card">
@@ -43,5 +44,7 @@
         </div>
       </div>
     </main>
+
+    <script src="./src/main.js"></script>
   </body>
 </html>
