--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
   <head>
     <meta charset="UTF-8" />
-    <title>白頭翁 Chinese Bulbul</title>
+    <title>維林test1</title>
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
@@ -33,7 +33,7 @@
         <div class="info-card">
           <h2>棲地</h2>
           <p>
-            在平原地區至海拔1800公尺的「闊葉雨林」、灌叢或出現於低海拔地區水邊，以灌叢和稀疏樹林為主要棲息環境。
+            白頭翁和麻雀、綠繡眼合稱「城市三寶」，常成群出現在平原區灌木叢、丘陵樹林地帶，以及校園、公園、庭院、行道中的各種高高的電線與樹上。
           </p>
         </div>
         <div class="info-card">
