sidebar完成，標題未置中

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
+    <div class="mobile-header">
+      <button class="menu-button">☰</button>
+      <span class="menu-span">白頭翁不吃小米</span>
+    </div>
+
     <div class="sidebar">
+      <button class="close-button">x</button>
       <ul class="sidebar-menu">
         <li><a href="#" class="active">白頭翁的特性</a></li>
         <li><a href="#">白頭翁的故事</a></li>
