--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>維林test1</title>
     <link rel="stylesheet" href="./src/style.css" />
   </head>
